--- a/FarshBoom/appsettings.json
+++ b/FarshBoom/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlCnn": "Data Source=.;Initial Catalog=FarshBoom;Trusted_Connection=True;",
+    "SqlCnn": "Data Source=.;Initial Catalog=FarshBoom;user id=sa;password=123;MultipleActiveResultSets=true",
     "SqlCnn12": "Data Source=185.88.152.127,1430;Initial Catalog=94_farshboom ;User Id=94_vaq;Password=V@qef2512740;MultipleActiveResultSets=True;Max Pool Size=9000;persist security info=True;"
   },
   "Logging": {
